[package]
name = "lnk"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ammonia = "3.3.0"
anyhow = "1.0.69"
axum = "0.6.18"
base64 = "0.21.2"
chrono = "0.4.26"
dotenvy = "0.15.7"
hmac = "0.12.1"
hyper = "0.14.27"
serde = { version = "1.0.171", features = ["derive"] }
serde_json = "1.0.103"
sha2 = "0.10.7"
sqlx = { version = "0.6", features = [ "runtime-async-std-native-tls", "postgres", "uuid", "chrono", "offline" ] }
tokio = { version = "1.29.1", features = ["full"] }
tower = "0.4.13"
tower-http = "0.4.1"
tracing = "0.1.37"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1.3.0", features = ["v4"] }
